objects/INX_Access__c.object
<CustomObject>
    <description>Stores Workspace and Instance access for Infinit</description>
    <fields>
        <fullName>INX_Can_Commit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can commit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INX_Can_Deploy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can deploy?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INX_Can_Manage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can manage?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INX_Can_Promote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can promote?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INX_Can_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can read?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INX_Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>INX_Instance__c</fullName>
        <label>Instance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Is_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is locked?</label>
        <type>Checkbox</type>
    </fields>
    <label>Access</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>INX_Email__c</columns>
        <columns>INX_Instance__c</columns>
        <columns>INX_Can_Read__c</columns>
        <columns>INX_Can_Commit__c</columns>
        <columns>INX_Can_Promote__c</columns>
        <columns>INX_Can_Deploy__c</columns>
        <columns>INX_Can_Manage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Access Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>